	systems without paperconf.

    o	Under GNOME, capabilities() now reports correctly that X11, png
	and jpeg are available (if they are under X11).

    o	The names of some results of unlist() had the wrong internal
	length, which confused paste().  Both have been corrected. (PR#1524)

    o   RweaveLatex.Rd had unbalanced braces in section "Supported
        Options".

    o	predict.*bSpline() bugs extrapolating for deriv >= 1 (PR#1473),
        and predict.[bn]s bug e.g. for bs(x), reported by Ch.Sangiorgio.


		CHANGES IN R VERSION 1.5.0


USER-VISIBLE CHANGES

    o	XDR support is now guaranteed to be available, so the default
	save format will always be XDR binary files, and it is safe to
	distribute data in that format.  (We are unaware of any
	platform that did not support XDR in recent versions of R.)

	gzfile() is guaranteed to be available, so the preferred
	method to distribute sizeable data objects is now via
	save(compress = TRUE).

    o	pie() replaces piechart() and defaults to using pastel colours.

    o	formatC has new arguments (see below) and formatC(*, d = <dig>)
	is no longer valid and must be written as formatC(*, digits = <dig>).

    o	Missingness of character strings is treated much more
	consistently, and the character string "NA" can be used as a
	non-missing value.

    o   summary.factor() now uses a stable sort, so the output will
	change where there are ties in the frequencies.


NEW FEATURES

    o   Changes in handing missing character strings:

        -  "NA" is no longer automatically coerced to a missing value
	   for a character string.  Use as.character(NA) where a missing
	   value is required, and test via is.na(x) not x == "NA".
	   String "NA" is still converted to missing by scan() and
	   read.table() unless `na.strings' is changed from the default.

        -  A missing character string is now printed as `NA' (no quotes)
	   amongst quoted character strings, and `<NA>' if amongst
	   unquoted character strings.
